# django-login-canary

./: .bumpversion.cfg  .coveragerc  .gitignore  .travis.yml  LICENSE  README.rst  setup.cfg  setup.py  tox.ini
example/example/: settings.py
login_canary/: __init__.py  apps.py  notify.py  settings.py
login_canary/locale/de/LC_MESSAGES/: django.mo  django.po
login_canary/locale/en/LC_MESSAGES/: django.mo  django.po
login_canary/templates/login_canary/: logged_in_body.txt  logged_in_subject.txt  login_failed_body.txt  login_failed_subject.txt
tests/: runtests.sh  settings.py  tests.py  urls.py
