[flake8]
exclude = build,dist,.git,./docs/source/conf.py,./login_canary/migrations/*.py
ignore = E123,E128,E265,E266,E402,E501,E731,W503,W601
max-line-length = 119

[isort]
combine_as_imports = true
default_section = THIRDPARTY
forced_separate = login_canary
include_trailing_comma = true
known_first_party = login_canary
multi_line_output = 5

[metadata]
license-file = LICENSE

[wheel]
universal = 1
